ändrade html lang till svenska, samt la till några alt detaljer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,7 +35,11 @@
     <div class="headerimg">
       <a class="logo" href="index.html">
         Fryele
-        <img class="house" src="img/institution-solid-36.png" alt="house" />
+        <img
+          class="house"
+          src="img/institution-solid-36.png"
+          alt="bild av ett litet hus"
+        />
       </a>
     </div>
 
@@ -44,7 +48,7 @@
         <img
           class="img"
           src="img/ordförande.jpg"
-          alt=""
+          alt="foto av ordförande"
           height="200"
           width="200"
         />
@@ -68,7 +72,11 @@
       <div class="newsbox1 newsbox">
         <h2 class="news-subtitle">Hej Nyhet</h2>
         <div class="flex-news">
-          <img class="hästbild" src="img/horse10-min.jpg" alt="" />
+          <img
+            class="hästbild"
+            src="img/horse10-min.jpg"
+            alt="bild på en av fryele's hästar"
+          />
           <p class="news-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
             illum dolores explicabo aut. Architecto dolore tempore repellendus
@@ -80,7 +88,11 @@
       <div class="newsbox2 newsbox">
         <h2 class="news-subtitle">Hej Nyhet</h2>
         <div class="flex-news">
-          <img class="hästbild" src="img/horse1-min.jpg" alt="" />
+          <img
+            class="hästbild"
+            src="img/horse1-min.jpg"
+            alt="bild på en av fryele's hästar"
+          />
           <p class="news-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores
             numquam suscipit repellat sed ex illum, ipsa nesciunt quasi,
@@ -92,7 +104,11 @@
       <div class="newsbox3 newsbox">
         <h2 class="news-subtitle">Hej Nyhet</h2>
         <div class="flex-news">
-          <img class="hästbild" src="img/horse12-min.jpg" alt="" />
+          <img
+            class="hästbild"
+            src="img/horse12-min.jpg"
+            alt="bild på en av fryele's hästar"
+          />
           <p class="news-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
             nostrum optio veniam ut expedita pariatur inventore blanditiis quod
