--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,7 +35,11 @@
     <main class="border-container">
       <div class="border-inner">
         <div class="b1 border">
-          <img class="border-img led1-img" src="img/ledamot1.jpg" alt="" />
+          <img
+            class="border-img led1-img"
+            src="img/ledamot1.jpg"
+            alt="foto av ledamot"
+          />
           <p class="border-name">Namn Namnison</p>
           <p class="border-p">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum
@@ -45,7 +49,11 @@
           <p class="phone-border">+46 76-211 06 09</p>
         </div>
         <div class="b2 border">
-          <img class="border-img" src="img/ledamot2.jpg" alt="" />
+          <img
+            class="border-img"
+            src="img/ledamot2.jpg"
+            alt="foto av ledamot"
+          />
           <p class="border-name">Namn Namnison</p>
           <p class="border-p">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum
@@ -55,7 +63,11 @@
           <p class="phone-border">+46 76-211 06 09</p>
         </div>
         <div class="b3 border">
-          <img class="border-img" src="img/ledamot3.jpg" alt="" />
+          <img
+            class="border-img"
+            src="img/ledamot3.jpg"
+            alt="foto av ledamot"
+          />
           <p class="border-name">Namn Namnison</p>
           <p class="border-p">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum
@@ -65,7 +77,11 @@
           <p class="phone-border">+46 76-211 06 09</p>
         </div>
         <div class="b4 border">
-          <img class="border-img led4-img" src="img/ledamot4.jpg" alt="" />
+          <img
+            class="border-img led4-img"
+            src="img/ledamot4.jpg"
+            alt="foto av ledamot"
+          />
           <p class="border-name">Namn Namnison</p>
           <p class="border-p">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum
@@ -75,7 +91,11 @@
           <p class="phone-border">+46 76-211 06 09</p>
         </div>
         <div class="b5 border">
-          <img class="border-img" src="img/ledamot5.jpg" alt="" />
+          <img
+            class="border-img"
+            src="img/ledamot5.jpg"
+            alt="foto av ledamot"
+          />
           <p class="border-name">Namn Namnison</p>
           <p class="border-p">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum
@@ -85,7 +105,11 @@
           <p class="phone-border">+46 76-211 06 09</p>
         </div>
         <div class="b6 border">
-          <img class="border-img led6-img" src="img/ledamot6.jpg" alt="" />
+          <img
+            class="border-img led6-img"
+            src="img/ledamot6.jpg"
+            alt="foto av ledamot"
+          />
           <p class="border-name">Namn Namnison</p>
           <p class="border-p">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum
@@ -95,7 +119,11 @@
           <p class="phone-border">+46 76-211 06 09</p>
         </div>
         <div class="b7 border">
-          <img class="border-img" src="img/ordförande.jpg" alt="" />
+          <img
+            class="border-img"
+            src="img/ordförande.jpg"
+            alt="foto av ordförande"
+          />
           <p class="border-name">Namn Namnison</p>
           <p class="border-p">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum
