--- a/ridskola.html
+++ b/ridskola.html
@@ -46,6 +46,7 @@
             class="staff-img"
             src="img/Personal2.jpg"
             alt="foto av en i personal"
+            loading="lazy"
           />
           <p class="staff-title">Namn Namnison</p>
           <p class="staff-text">
@@ -59,6 +60,7 @@
             class="staff-img staff-posimg"
             src="img/Personal3.jpg"
             alt="foto av en i personal"
+            loading="lazy"
           />
           <p class="staff-title">Namn Namnison</p>
           <p class="staff-text">
@@ -74,7 +76,12 @@
       <h1 class="title-allhorse">Alla Hästar</h1>
       <div class="hiro-horse-container">
         <div class="horse1 horse">
-          <img class="horse-img" src="img/horse1-min.jpg" alt="häst ett" />
+          <img
+            class="horse-img"
+            src="img/horse1-min.jpg"
+            alt="häst ett"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa,
@@ -82,7 +89,12 @@
           </p>
         </div>
         <div class="horse2 horse">
-          <img class="horse-img" src="img/horse2-min.jpg" alt="häst två" />
+          <img
+            class="horse-img"
+            src="img/horse2-min.jpg"
+            alt="häst två"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
@@ -90,7 +102,12 @@
           </p>
         </div>
         <div class="horse3 horse">
-          <img class="horse-img" src="img/horse3-min.jpg" alt="häst tre" />
+          <img
+            class="horse-img"
+            src="img/horse3-min.jpg"
+            alt="häst tre"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel,
@@ -98,7 +115,12 @@
           </p>
         </div>
         <div class="horse4 horse">
-          <img class="horse-img" src="img/horse4-min.jpg" alt="häst fyra" />
+          <img
+            class="horse-img"
+            src="img/horse4-min.jpg"
+            alt="häst fyra"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
@@ -106,7 +128,12 @@
           </p>
         </div>
         <div class="horse5 horse">
-          <img class="horse-img" src="img/horse5-min.jpg" alt="häst fem" />
+          <img
+            class="horse-img"
+            src="img/horse5-min.jpg"
+            alt="häst fem"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias,
@@ -122,7 +149,12 @@
           </p>
         </div>
         <div class="horse7 horse">
-          <img class="horse-img" src="img/horse7-min.jpg" alt="häst sju" />
+          <img
+            class="horse-img"
+            src="img/horse7-min.jpg"
+            alt="häst sju"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab,
@@ -130,7 +162,12 @@
           </p>
         </div>
         <div class="horse8 horse">
-          <img class="horse-img" src="img/horse8-min.jpg" alt="häst åtta" />
+          <img
+            class="horse-img"
+            src="img/horse8-min.jpg"
+            alt="häst åtta"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
@@ -138,7 +175,12 @@
           </p>
         </div>
         <div class="horse9 horse">
-          <img class="horse-img" src="img/horse9-min.jpg" alt="häst nio" />
+          <img
+            class="horse-img"
+            src="img/horse9-min.jpg"
+            alt="häst nio"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro,
@@ -146,7 +188,12 @@
           </p>
         </div>
         <div class="horse10 horse">
-          <img class="horse-img" src="img/horse10-min.jpg" alt="häst tio" />
+          <img
+            class="horse-img"
+            src="img/horse10-min.jpg"
+            alt="häst tio"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod,
@@ -154,7 +201,12 @@
           </p>
         </div>
         <div class="horse11 horse">
-          <img class="horse-img" src="img/horse11-min.jpg" alt="häst elva" />
+          <img
+            class="horse-img"
+            src="img/horse11-min.jpg"
+            alt="häst elva"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
@@ -162,7 +214,12 @@
           </p>
         </div>
         <div class="horse12 horse">
-          <img class="horse-img" src="img/horse12-min.jpg" alt="häst tolv" />
+          <img
+            class="horse-img"
+            src="img/horse12-min.jpg"
+            alt="häst tolv"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
@@ -182,7 +239,12 @@
           </p>
         </div>
         <div class="horse14 horse">
-          <img class="horse-img" src="img/horse15-min.jpg" alt="häst femton" />
+          <img
+            class="horse-img"
+            src="img/horse15-min.jpg"
+            alt="häst femton"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente,
@@ -190,7 +252,12 @@
           </p>
         </div>
         <div class="horse15 horse">
-          <img class="horse-img" src="img/horse16-min.jpg" alt="häst sexton" />
+          <img
+            class="horse-img"
+            src="img/horse16-min.jpg"
+            alt="häst sexton"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
@@ -198,7 +265,12 @@
           </p>
         </div>
         <div class="horse16 horse">
-          <img class="horse-img" src="img/horse17-min.jpg" alt="häst sjutton" />
+          <img
+            class="horse-img"
+            src="img/horse17-min.jpg"
+            alt="häst sjutton"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
@@ -218,7 +290,12 @@
           </p>
         </div>
         <div class="horse18 horse">
-          <img class="horse-img" src="img/horse19-min.jpg" alt="häst nitton" />
+          <img
+            class="horse-img"
+            src="img/horse19-min.jpg"
+            alt="häst nitton"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos,
@@ -226,7 +303,12 @@
           </p>
         </div>
         <div class="horse19 horse">
-          <img class="horse-img" src="img/horse20-min.jpg" alt="häst tjugo" />
+          <img
+            class="horse-img"
+            src="img/horse20-min.jpg"
+            alt="häst tjugo"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, amet?
