--- a/ridskola.html
+++ b/ridskola.html
@@ -141,7 +141,12 @@
           </p>
         </div>
         <div class="horse6 horse">
-          <img class="horse-img" src="img/horse6-min.jpg" alt="häst sex" />
+          <img
+            class="horse-img"
+            src="img/horse6-min.jpg"
+            alt="häst sex"
+            loading="lazy"
+          />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
@@ -231,6 +236,7 @@
             class="horse-img"
             src="img/horse1314-min.jpg"
             alt="häst tretton och fjorton"
+            loading="lazy"
           />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
@@ -282,6 +288,7 @@
             class="img-refit horse-img"
             src="img/horse18-min.jpg"
             alt="häst arton"
+            loading="lazy"
           />
           <p class="horse-name">Namn</p>
           <p class="horse-text">
